[build-system]
requires = [
    "hatch-vcs",
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "pcs"
dynamic = ["version"]
description = "Prime-Cam Control System"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Framework :: Twisted",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "autobahn[serialization]",
    "numpy",
    "ocs",
    "sqlalchemy>=1.4",
    "twisted",
    "requests",
    "pyserial"
]

[project.entry-points."ocs.plugins"]
pcs = "pcs.plugin"

[project.urls]
"Bug Tracker" = "https://github.com/ccatobs/pcs/issues"
#Documentation = "https://pcs.readthedocs.io/" - not set up yet!
Homepage = "https://github.com/ccatobs/pcs"
"Source Code" = "https://github.com/ccatobs/pcs"

[tool.hatch.version]
source = "vcs"

# closest scheme to versioneer behavior, avoids auto-incremented version number
# https://setuptools-scm.readthedocs.io/en/latest/usage/#default-versioning-scheme
[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"

[tool.hatch.build.hooks.vcs]
version-file = "pcs/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/pcs",
]

[tool.isort]
skip = ["versioneer.py", "pcs/_version.py"]